Closed Bug 1947023 Opened 6 months ago Closed 6 months ago

Test-case reducer add-on is blank on Nightly

Categories

(DevTools :: General, defect)

defect

Tracking

(firefox-esr128 unaffected, firefox135 unaffected, firefox136 unaffected, firefox137 fixed)

RESOLVED FIXED
137 Branch
Tracking Status
firefox-esr128 --- unaffected
firefox135 --- unaffected
firefox136 --- unaffected
firefox137 --- fixed

People

(Reporter: emilio, Assigned: emilio)

References

(Regression)

Details

(Keywords: regression)

Attachments

(2 files)

STR

  1. Install https://addons.mozilla.org/en-US/firefox/addon/testcase-reducer/
  2. Go to any site like wikipedia.
  3. Inspect a node.
  4. Click on the test-case reducer add-on.

What happened?

Blank panel.

What should have happened?

The extension panel shows up.

Bisected to https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=248076e70562bfc598d78c68fc1266df0bdc03cb&tochange=0650029a3ec3ced370663cd51701c62a77383337

Flags: needinfo?(poirot.alex)

Set release status flags based on info from the regressing bug 1943543

Might be a Core issue since switching the deck to display: none and back "fixes" the issue...

I think this is wrong: It only propagates to same-browsing-context-tree children, but not to top descendants...

Flags: needinfo?(emilio)
Assignee: nobody → emilio
Status: NEW → ASSIGNED

Toggling its visibility before loading the inner html document workaround
the platform issue around "IsUnderHiddenEmbedderElement".

I'm also attaching a really simple workaround in devtools, which simply reverts a small change I did in the regressor.
Just in case we can't get the BrowsingContext fix landed shortly.

Flags: needinfo?(poirot.alex)
Flags: needinfo?(emilio)

Thanks emilio for jumping on fixing the BrowsingContext code. I pushed the devtools workaround to fix webextension addons in the next nightly.

Keywords: leave-open
Pushed by apoirot@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/b4d063601888 [devtools] Fix showing Web extension panels in DevTools. r=devtools-reviewers,nchevobbe
Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/88f8b983d30d Propagate hidden-under-embedder properly to nested tops. r=nika,devtools-reviewers,ochameau
Status: ASSIGNED → RESOLVED
Closed: 6 months ago
Resolution: --- → FIXED
Target Milestone: --- → 137 Branch

Do you want to remove the DevTools workaround?

Flags: needinfo?(poirot.alex)

yes, I'll do that.

Flags: needinfo?(poirot.alex)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: