Bug 1947023 - Propagate hidden-under-embedder properly to nested tops. r=nika,devtools-reviewers,ochameau

Differential Revision: https://phabricator.services.mozilla.com/D237502